--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
                 required></textarea>
             </div>
             <div class="col-md-12 text-center">
-              <button type="submit">Send Message</button>
+              <button type="submit" class="btn-submit">Send Message</button>
             </div>
           </div>
         </form>
